--- a/catalog/templates/catalog/tutor_detail.html
+++ b/catalog/templates/catalog/tutor_detail.html
@@ -1,23 +1,24 @@
 {% extends "catalog/base.html" %}
 {% block content %}
     <h1>Tutor: {{ tutor.tutor_fname }} {{ tutor.tutor_lname }}</h1>
-    
+
+    <!-- % if tutor_detail %} -->
         <div>
         {% if tutor.tutor_image %}
             <img src="{{ tutor.tutor_image.url }}">
         {% endif %}
         </div>
     
-    <div style="margin-left:20px;margin-top:20px">
-        {% for tutor in tutor_list %}    
+        <div style="margin-left:20px;margin-top:20px">
+        <!-- % for tutor in tutor_detail %}   --> 
             <p><strong>Years of Experience:</strong> {{ tutor.tutor_exp }}</p>
             <p><strong>About Me:</strong> {{ tutor.tutor_funFact }}</p>
             <p><strong>Hourly Rate:</strong> {{ tutor.tutor_hrRate }}</p>
-            <p><strong>Availability:</strong> {{ tutor.tutor.availability.all|join:", " }}</p>
-        {% endfor %}
+            <p><strong>Availability:</strong> {{ tutor.tutor_availability.all|join:", " }}</p>
+        <!-- % endfor %} -->
             <button type="button">
                 <a href="{% url 'tutor_list' %}">Go Back to Tutor List</a>
             </button>
-    </div>
-    
+        </div>
+    <!-- % endif %}  -->
 {% endblock %}
